Fix notification dropdown on small displays

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,3 +32,8 @@ main {
   border-radius: .25rem;
   border: 1px solid #333;
 }
+
+
+.notification-dropdown.dropdown > .dropdown-menu > li > a {
+  white-space: normal; 
+}
